2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

        * operation/agentes/estado_agente.php, operation/agentes/bulbs.php:
          reverted changes.

2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

	* operation/agentes/estado_agente.php, operation/agentes/bulbs.php:
	  fixed bug, blue monitor means it has no monitors, while gray means
	  it has no data.

2008-10-20  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/estado_grupo.php: Fixed a notice error when the
	query returns nothing.

2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/cs.po, include/languages/pt_BR.po,
	  include/languages/es.po, include/languages/uk.po,
	  include/languages/ro.po, include/languages/fr.po,
	  include/languages/ca.po, include/languages/de.po,
	  include/languages/sv.po, include/languages/zh_TW.po,
	  include/languages/hi.po, include/languages/zh_CN.po,
	  include/languages/te.po, include/languages/eu.po,
	  include/languages/hu.po, include/languages/ru.po,
	  include/languages/gl.po, include/languages/pl.po,
	  include/languages/it.po, include/languages/sl.po,
	  include/languages/pt.po, include/languages/ast.po: Updated
	  translations from Rosetta, thanks to all contributors.

	* Makefile: modified entries to make them be in alphabetic order.

2008-10-17  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/db/db_purge.php: Bug fix where db_purge wouldn't work
	correctly if all was selected. Also added inc data to the count

2008-10-17  Sancho Lerena <slerena@gmail.com>

	* fgraph.php, db_info.php, db_purge.php: Now show data also
	for string modules.

	* include/config_process.php, index.php: Header update for version
	2.1-dev.

2008-10-16  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_html.php: Added print_error_message, a function
	that will print out <h3> error messages for you given a result

	* godmode/modules/manage_network_templates_form.php: Rewrite for new